<resources>
    <string name="app_name">Oasis Trade Window</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Auto</string>
    <string name="title_section3">Commercial</string>
    <string name="title_section4">Residential</string>
    <string name="title_section5">Placeholder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Log In</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Oasis Trade, Inc.</string>

    <string name="home">Home</string>
    <string name="auto">Auto</string>
    <string name="Help">Help Center</string>
    <string name="Messages">Message Center</string>
    <string name="commercial">Commercial</string>
    <string name="placeholder">Placeholder</string>
    <string name="residential">Residential</string>
    <string name="title_activity_home">home</string>
    <string name="Coupons">Coupons</string>
    <string name="Profile">Profile</string>
    <string name="title_activity_colors">colors</string>

    <string name="hello_world">Hello world!</string>
</resources>
