<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/Coupons"
        android:title="@string/Coupons" />
    <item
        android:id="@+id/Profile"
        android:title="@string/Profile" />
    <item
        android:id="@+id/Messages"
        android:title="@string/Messages" />
    <item
        android:id="@+id/Help"
        android:title="@string/Help" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="About"
        app:showAsAction="never" />

</menu>
